[package]
name = "doorways"
version = "0.1.0"
authors = ["Joshua Benuck <joshua_benuck@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "*"
dirs = "*"
failure = "*"
glob = "*"
glutin = "*"
piston = "*"
piston-texture = "*"
piston2d-graphics = "*"
pistoncore-glutin_window = "*"
piston2d-opengl_graphics = "*"
find_folder = "*"
image = "*"
reqwest = "*"
serde = "*"
serde_json = "*"
url = "*"
image_grid = { path = "../image_grid" }
twitch = { path = "../twitch" }
steam = { path = "../steam" }
winapi = "*"
kernel32-sys = "*"
user32-sys = "*"

[build-dependencies]
winres = "*"

[features]
default = ["glutin/icon_loading"]
