[package]
name = "doorways"
version = "0.1.9"
authors = ["Joshua Benuck <joshua_benuck@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "*"
dirs = "*"
glob = "*"
glutin = "*"
piston = "0.49.0"
piston-texture = "0.8.0"
piston2d-graphics = "0.35.0"
piston2d-opengl_graphics = "0.70.0"
pistoncore-glutin_window = "0.63.0"
find_folder = "*"
image = "0.22.3"
reqwest = "0.9.22"
serde = "*"
serde_json = "*"
url = "*"
image_grid = { path = "../image_grid" }
twitch = { path = "../twitch" }
steam = { path = "../steam" }
epic = { path = "../epic" }
winapi = "0.3.8"
kernel32-sys = "*"
user32-sys = "*"
winreg = "0.6.2"
anyhow = "1.0.31"

[build-dependencies]
winres = "*"

[features]
default = ["glutin/icon_loading"]
